[package]
name = "terraform-provider-null"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
tf-provider = { path = "../../" }

anyhow.workspace = true
async-trait.workspace = true
rand.workspace = true
serde.workspace = true
tokio.workspace = true
