#cargo-features = ["once_cell"]

[package]
name = "rusftp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = { version = "0.1.11", features = ["sync", "net"] }
tokio-util = "0.7"
russh = "0.37"
bytes = "1.4"
